--- a/BlazorApp1/wwwroot/css/app.css
+++ b/BlazorApp1/wwwroot/css/app.css
@@ -1,4 +1,7 @@
 ﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
