--- a/BlazorApp1/Pages/Index.razor
+++ b/BlazorApp1/Pages/Index.razor
@@ -5,7 +5,7 @@
 
 
 	
-	
+	<Animate Animation="Animations.Fade">
 	<div class="columns  is-mobile is-centered ">
 		<div class="column is-half"><p class="title is-1 has-text-centered">Bisimulation</p></div>
 	</div>
@@ -20,7 +20,7 @@
 		<button class="button is-primary" @onclick="OnClickAi">PLAYER VS AI</button>
 	</div>
 	</div>
-	
+</Animate>
 
 
 
